--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -66,13 +66,14 @@
     <ul>
       <li>使用最新的 Android Pager Adapter 进行平滑滚动更顺畅</li>
       <li>直接输入诗歌编号以显示歌词；或从目录分类进入："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"</li>
-      <li>给予完整大本詩歌，補充本詩歌，新歌颂咏，及儿童诗歌歌，诗词搜索和选项进入</li>
+      <li>给予完整大本詩歌，補充本詩歌，新诗歌本，新歌颂咏，儿童诗歌，及英文， 诗词搜索和选项进入</li>
+      <li>允许直接输入英文诗歌编号；显示相应的中文诗歌词（如果存在），否则只显示英文歌词</li>
       <li>最大搜索为200项，显示匹配结果的4行完整诗词句</li>
-      <li>长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’</li>
+      <li>在内容搜索开始之前自动将繁体中文翻译为简体文本。长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’</li>
       <li>以最大允许的屏幕大小，同时显示诗歌乐谱和歌词文本</li>
       <li>手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，显示自动加大150%，易于阅读</li>
-      <li>媒体播放类别：用户定义媒体，伴奏，教唱，唱诗</li>
-      <li>支持QQ媒体链接、YouTube、谷歌搜索功能</li>
+      <li>媒体播放类别：用户定义媒体，教唱，唱诗，伴奏</li>
+      <li>支持 QQ/Notion 媒体链接、YouTube、网络搜索功能</li>
       <li>用户定义媒体内容的支持，即每个诗歌标题的视频和音频以进行播放</li>
       <li>支持安卓共享以添加媒体内容，或来自第三方应用程序的网址链接作为用户定义的媒体内容</li>
       <li>允许导出保存中的用户定义媒体内容，以通过导入与其他安卓设备共享</li>
@@ -81,10 +82,10 @@
       <li>包括嵌入式视频媒体播放器，用于播放用户定义的视频媒体和其他优酷网址</li>
       <li>开发新的音频媒体播放器用户界面。给用户最大的控制权</li>
       <li>可调媒体播放速度：0.6x〜1.4x；和可选重复次数播放</li>
+      <li>可自我下载并复制媒体文件到预定义的目录（Download/hymnchtv）以用于播放</li>
       <li>网络媒体下载仅一次；内部存储，供以后播放</li>
       <li>媒体播放同步于用户新选诗歌编号，无需返回主页</li>
       <li>诗歌媒体播放以当前状态继续，直到歌曲结束；然后再同步用户新选诗歌编号</li>
-      <li>可自我下载并复制媒体文件到预定义的目录（Download/hymnchtv）以用于播放</li>
       <li>用户可选择主题支持：Theme.DARK 和 Theme.LIGHT, 包括 WebView</li>
       <li>用户可选择的语言环境：简体中文和英文</li>
       <li>在中文歌词显示中支持中文简体到繁体（香港繁体，台湾正体，或台湾常用词汇）转换</li>
@@ -109,8 +110,8 @@
 				<li class="animated wow fadeInDown">
 					<h2>书拉密女诗歌本应用程序主用户界面</h2>
 					<div class="media">
-            <image src="./img/01.hymnchtv_main.png"/>
-						<p>诗歌输入可使用诗歌编号，目录选项或简体中文内容搜索。诗歌编号：输入(附)号码后按大本，补充，新颂，儿诗或英文。
+            <image src="./img/01.hymnchtv_main.png" height="90%"/>
+						<p>诗歌输入可使用诗歌编号，目录选项或简体中文内容搜索。诗歌编号：输入(附)号码后按大本，补充，新诗，新颂，儿诗或英文。
 						内容搜索：长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。</p>
 					</div>					
 				</li>
@@ -134,7 +135,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay=".3s">
 					<h2>用户诗歌目录类别索引选项界面</h2>
 					<div class="media">
-            <image src="./img/04.hymnchtv_main_toc.png"/>
+            <image src="./img/04.hymnchtv_main_toc.png" height="95%"/>
 						<p>用户可用诗歌目录选择："诗歌类别"，"笔画索引"，"拼音索引"，和"英中对照"；后按大本,补充,新颂或儿诗进入。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0020'>应用程序</a></p>
 					</div>
 				</li>
@@ -182,7 +183,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>用户选择诗歌乐谱和歌词文本中显示</h2>
 					<div class="media">
-            <image src="./img/10.hymnchtv_lyrics_text.png"/>
+            <image src="./img/10.hymnchtv_lyrics_text.png" height="95%"/>
 						<p>诗歌乐谱和歌词文本显示。向上下滚动以阅读内容。手机横向模式时，媒体播放器界面自动隐藏；乐谱和歌词文本，自动加大1.5倍易于阅读。</p>
 					</div>
 				</li>
@@ -190,7 +191,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>书拉密女诗歌弹出上下文菜单</h2>
 					<div class="media">
-            <image src="./img/11.hymnchtv_context_menu.png"/>
+            <image src="./img/11.hymnchtv_context_menu.png" height="95%"/>
 						<p>长按诗歌显示画面弹出上下文菜单选项：默认显示/隐藏播放条，显示/隐藏播放条；或[英文歌词]选项，如有相关的英文词歌文本。手机横向模式时，媒体播放器界面自动隐藏。<a style="color:blue"; href='./faq.html#hymnch_0040'>应用程序</a></p>
 					</div>
 				</li>
@@ -198,7 +199,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>用户选择诗歌其英文词歌文本显示</h2>
 					<div class="media">
-            <image src="./img/12.hymnchtv_lyrics_english.png"/>
+            <image src="./img/12.hymnchtv_lyrics_english.png" height="95%"/>
 						<p>按英文歌词按钮或长按诗歌显示画面弹出上下文菜单选项；然后选择[英文歌词]选项；则应用会自动访问在线相关的英文词歌文本。使用[返回键]返回上一屏幕</p>
 					</div>
 				</li>
@@ -244,7 +245,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>最近诗歌历史记录选择支持</h2>
 					<div class="media">
-            <image src="./img/hymnchtv_hymn_history.png"/>
+            <image src="./img/hymnchtv_recent_hymns.png" height="95%"/>
 						<p>只需单击 [输入诗歌编号&#11015;] 显示位置，即可显示最近诗歌选择历史。然后选择诗歌编号项目进入。列表首先显示最近选择的诗歌编号。</p>
 					</div>
 				</li>
@@ -252,7 +253,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>关于书拉密女诗歌应用程序</h2>
 					<div class="media">
-            <image src="./img/13.hymnchtv_about.png"/>
+            <image src="./img/13.hymnchtv_about.png" height="95%"/>
 						<p>关于书拉密女诗歌程序界面。选择历史记录以查看应用程序发布记录日志。如果遇到应用程序问题，可以提交错误报告。更新选项仅在调试版本中可用。</p>
 					</div>
 				</li>
@@ -260,7 +261,7 @@
 				<li class="animated wow fadeInDown" data-wow-delay="0.8s">
 					<h2>书拉密女诗歌应用程序主菜单选项</h2>
 					<div class="media">
-            <image src="./img/14.hymnchtv_option_menu.png"/>
+            <image src="./img/14.hymnchtv_option_menu.png" height="95%"/>
 						<p>用户可选的主菜单选项包括墙纸，字体大小，字体颜色，访问网上帮助以及关于书拉密女诗歌应用程序</p>
 					</div>
 				</li>
