Update hymmchtv video media help file

--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -208,7 +208,7 @@
 					<h2>用户定义媒体设置用户界面</h2>
 					<div class="media" id="media_share">
  						<video id="media_content" poster="./img/hymnchtv_media_config.png" controls>
-							<source src="./video/mediaconfig_01.mp4" type="video/mp4">
+							<source src="./video/mediaconfig_yt_search.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 						<p>支持对用户定义媒体内容，即每个诗歌标题的视频和音频以进行播放。支持安卓共享以添加媒体内容，或网址链接的媒体。请检阅 <a style="color:blue"; href='./faq.html#hymnch_0070'>应用程序</a></p>
@@ -219,7 +219,7 @@
 					<h2>媒体设置用户界面-数库列项</h2>
 					<div class="media" id="create_export">
  						<video id="media_content" poster="./img/hymnchtv_media_record_list.png" controls>
-							<source src="./video/mediaconfig_02.mp4" type="video/mp4">
+							<source src="./video/mediaconfig_url_export.mp4" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
 						<p>显示数据库中保存的所有用户的媒体记录列表。该列表仅显示当前选择的诗歌类别媒体记录。页面标题指示数据库中的记录数。</p>
