Update Hymnchtv 2.4.3 release

--- a/hymnchtv/faq.html
+++ b/hymnchtv/faq.html
@@ -93,7 +93,7 @@ ul li {
      <h4>hymnchtv UI desgin &amp; Implementation</h4>
      <image src="./img/hymnchtv_help_qrcode.png" align="right" width="20%" style="margin:5px 0px 20px 15px"/>
      <ul>
-       <li><a href=#hymnch_0090>[20240625] Hymnchtv debug version installation</a></li>
+       <li><a href=#hymnch_0090>[20241005] Hymnchtv debug version installation</a></li>
      </ul>
      <ul>
        <li><a href=#hymnch_0010>[20240518] hymnchtv UI design &amp; Implementation</a></li>
@@ -141,19 +141,19 @@ ul li {
    <div id='subSection'>hymnchtv UI design &amp; Implementation</div>
 
    <span id='hymnch_0090'></span>
-   <div class='blueText'>[20240625] Hymnchtv debug version installation <a href=#content>{ Content }</a></div>
+   <div class='blueText'>[20241005] Hymnchtv debug version installation <a href=#content>{ Content }</a></div>
    <div class='innerText'>
      <image src="./img/hymnchtv_apk_qrcode.png" align="right" width="20%" style="margin:5px 0px 20px 15px"/>
      You may obtain a copy of the latest hymnchtv debug apk for your personal evaluation from the directory:<br />
      i.e. <a href="https://github.com/cmeng-git/hymnchtv/releases">https://github.com/cmeng-git/hymnchtv/releases</a>.<br />
      The lastest release at the time of this online help update is: </div>
    <div class='innerText'>
-     <li><a href="https://github.com/cmeng-git/hymnchtv/releases/download/2.4.2/hymnchtv-debug.apk">
-     https://github.com/cmeng-git/hymnchtv/releases/download/2.4.2/hymnchtv-debug.apk</a></li>
+     <li><a href="https://github.com/cmeng-git/hymnchtv/releases/download/2.4.3/hymnchtv-debug.apk">
+     https://github.com/cmeng-git/hymnchtv/releases/download/2.4.3/hymnchtv-debug.apk</a></li>
    </div>
-   <div class='innerText'>Please note that the debug apk contains a different signature from the one in android
-     playstore apk. Android OS will prompt you to uninstall the existing app if any, before you can install the debug
-     apk with a different signature.</div>
+   <div class='innerText'>Please note that the debug apk contains a different signature from the release apk.
+     Android OS will prompt you to uninstall the existing app if any, before you can install the debug apk with a
+     different signature. Both versions support auto-update function, prompting the user if there is a new release.</div>
    <div class='innerText'>
      <b>Warning:</b> Please perform the following before you uninstall the existing app if any; otherwise you may loose
        all the media url and file links information previously saved in the database; although all the media contents
